--- a/sayba-app2/src/components/MessageSenderHomeComponent/MessageSenderHome.css
+++ b/sayba-app2/src/components/MessageSenderHomeComponent/MessageSenderHome.css
@@ -7,6 +7,7 @@
     box-shadow:0px 5px 7px -7px rgba(0,0,0,0.75);
     width:100%;
     /* height:150px; */
+    margin-right: auto;
 }
 
 .messageSenderHome__top{
@@ -32,6 +33,37 @@ margin-bottom: 5%;
 height:2em;
 width:150px;
 margin-right: -40px;
+display: flex;
+justify-content:space-evenly;
+}
+
+.messageSenderHome__top > form > button{
+    display: none;
+}
+
+.messageSenderHome__bottom{
+    display: flex;
+    justify-content:space-evenly;
+}
+
+.messageSenderHome__option{
+
+    display:flex;
+    align-items: baseline;
+    color:gray;
+    margin:5px;
+}
+
+.messageSenderHome__option >h3{
+    color:gray;
+    font-size:medium;
+    padding-bottom: 10%;
+    cursor: pointer;
+}
+
+.messageSenderHome__option:hover{
+    background-color:#eff2f5;
+    border-radius:20px;
 }
 
 
