--- a/sayba-app2/src/App.css
+++ b/sayba-app2/src/App.css
@@ -1,13 +1,13 @@
 
 
-
+/* 
 .app{
     /* background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%); */
     
    
-    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-}
+    /* background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); */
+/* }
 
 .app__body{
  display: flex;
-}
+} */ 
