--- a/sayba-app2/src/components/LoginComponent/Login.css
+++ b/sayba-app2/src/components/LoginComponent/Login.css
@@ -2,6 +2,7 @@
     display:grid;
     place-items:center;
     height:100vh;
+     background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
 }
 
 
