--- a/sayba-app2/src/components/LoginComponent/Login.css
+++ b/sayba-app2/src/components/LoginComponent/Login.css
@@ -3,7 +3,9 @@
     place-items:center;
     height:100vh;
      background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-}
+     background-size: 300%;
+     animation: ani 5s infinite linear;
+    }
 
 
 .login>button{
@@ -34,4 +36,18 @@
     object-fit:contain;
     height: 150px;
     font-size:small;
+}
+
+@keyframes ani {
+    0% {
+        background-position: 0% 50%;
+      }
+    
+      50% {
+        background-position: 100% 50%;
+      }
+    
+      100% {
+        background-position: 0% 50%;
+      }
 }
