--- a/sayba-app2/src/components/MessageComponent/Sidebar.css
+++ b/sayba-app2/src/components/MessageComponent/Sidebar.css
@@ -1,12 +1,12 @@
 .sidebar{
     display:flex;
     flex-direction: column;
-    flex:0.35;
+   width:40%;
 
 }
 
 /* May not need the header thing here, lol */
-.sidebar__header{
+ /* .sidebar__header{
     display:flex;
     justify-content:space-between;
     padding:20px;
@@ -18,15 +18,22 @@
     align-items:center;
     justify-content: space-between;
     min-width: 10vw;
-}
+}   */
 
 .sidebar__search{
     display:flex;
     align-items: center;
-    background-color: #f6f6f6f6;
+    background-color:white;
+    /* background-color: #f6f6f6f6; */
     height:39px;
     padding: 10px;
+    border-bottom:3px solid #f6f6f6;
+  
 }
+/* .sidebar__search:hover {
+    background-color: #ebebeb
+    
+} */
 
 .sidebar__searchContainer > .MuiSvgIcon-root{
     color:gray;
@@ -40,11 +47,13 @@
     width:100%;
     height:35px;
     border-radius:20px;
+ 
 }
 
 .sidebar__searchContainer > input {
     border:none;
     margin-left:10px;
+    width:50%;
 }
 
 .sidebar__chats{
