--- a/sayba-app2/src/components/MessagingComponent/Chat.css
+++ b/sayba-app2/src/components/MessagingComponent/Chat.css
@@ -28,7 +28,7 @@
 background: #C9CCD3;
 background-repeat: repeat;
 background-position: center;
-/* overflow: scroll; */
+overflow: scroll;
 }
 
 .chat__message{
@@ -77,7 +77,7 @@ display:flex;
 }
 
 .chat__footer>form>input{
-   
+      
     border-radius: 30px;
     padding: 10px;
     border:none;
