--- a/sayba-app2/src/components/MessagingComponent/Messaging.css
+++ b/sayba-app2/src/components/MessagingComponent/Messaging.css
@@ -1,11 +1,11 @@
-.message{
+.messaging{
     background-color:#dadbd3;
     height:100vh;
     display: grid;
     place-items:center;
 }
 /* #eeddee; */
-.message__body{
+.messaging__body{
     display:flex;
     background-color: #ededed;
     height:100vh;
