--- a/sayba-app2/src/components/MessagingComponent/SidebarChat.css
+++ b/sayba-app2/src/components/MessagingComponent/SidebarChat.css
@@ -5,6 +5,14 @@
     border-bottom:2px solid #f6f6f6;
 }
 
+a{
+    text-decoration: none !important;
+    color: black;
+}
+
+
+
+
 .sidebarChat:hover {
     background-color: #ebebeb
     
