--- a/sayba-app2/src/components/FeedComponent/Feed.css
+++ b/sayba-app2/src/components/FeedComponent/Feed.css
@@ -5,7 +5,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: #C9CCD3;
+    animation: ani 5s infinite linear;
+    background-size: 300%;
+    background-image: linear-gradient(135deg, #cc208e 0%, #6713d2 100%);
+    /* background: #C9CCD3; */
  /* background-image: linear-gradient(-180deg, rgba(255,255,255,0.50) 0%, rgba(0,0,0,0.50) 100%);
  background-blend-mode: lighten; */
  /* background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%); */
@@ -16,4 +19,19 @@
   /* background: linear-gradient(to bottom, rgba(255,255,255,0.15) 0%, rgba(0,0,0,0.15) 100%), radial-gradient(at top center, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.40) 120%) #989898;
   background-blend-mode: multiply,multiply; */
  
+}
+
+
+@keyframes ani {
+  0% {
+      background-position: 0% 50%;
+    }
+  
+    50% {
+      background-position: 100% 50%;
+    }
+  
+    100% {
+      background-position: 0% 50%;
+    }
 }
