--- a/sayba-app2/src/components/HeaderComponent/Header.css
+++ b/sayba-app2/src/components/HeaderComponent/Header.css
@@ -52,8 +52,11 @@ border-radius:999px;
     color: #8b21f5;
 }
 
-.header__option--active{
+/* .header__option--active{
     border-bottom: 4px solid #8b21f5;
+} */
+.header__option-- :active:hover > .MuiSvgIcon-root{
+    color:  #8b21f5 ;
 }
 
 
