--- a/sayba-app2/src/components/LoginComponent/Login.css
+++ b/sayba-app2/src/components/LoginComponent/Login.css
@@ -2,8 +2,9 @@
     display:grid;
     place-items:center;
     height:100vh;
-     background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-     background-size: 300%;
+    /* background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%); */
+    background-image: linear-gradient(135deg, #cc208e 0%, #6713d2 100%);
+    background-size: 300%;
      animation: ani 5s infinite linear;
     }
 
@@ -29,14 +30,39 @@
     display:flex;
     flex-direction: column-reverse;
 }
-
+/* 
 .L{
     background-color:yellow;
     height: 10px;
     object-fit:contain;
     height: 150px;
     font-size:small;
+} */
+
+#logo{
+    animation:fill 0.5s ease forwards 3s;
 }
+
+#logo path:nth-child(1){
+    stroke-dasharray: 440.42626953125px;
+    stroke-dashoffset:440.42626953125px ;
+    animation: line-anim 2s ease forwards;
+}
+
+
+#logo path:nth-child(2){
+    stroke-dasharray: 404.671630859375px;
+    stroke-dashoffset:404.671630859375px ;
+    animation: line-anim 2s ease forwards 0.8s;
+}
+
+
+#logo path:nth-child(3){
+    stroke-dasharray: 382.98272705078125px;
+    stroke-dashoffset:382.98272705078125px ;
+    animation: line-anim 2s ease forwards 1.6s;
+}
+
 
 @keyframes ani {
     0% {
@@ -50,4 +76,19 @@
       100% {
         background-position: 0% 50%;
       }
+}
+
+@keyframes line-anim{
+    to{
+        stroke-dashoffset:0;
+    }
+}
+
+@keyframes fill{
+    from{
+        fill:transparent;
+    }
+    to{
+        fill: white;
+    }
 }
