--- a/sayba-app2/src/components/HeaderComponent/Header.css
+++ b/sayba-app2/src/components/HeaderComponent/Header.css
@@ -79,9 +79,9 @@ border-radius:999px;
 
 .header__option:hover{
  background-color:#eff2f5;
- border-radius: 10px;
+ /* border-radius: 10px;
  align-items: center;
- padding: 0 5px;
+ padding: 0 5px; */
  border-bottom:none;
 }
 
