--- a/sayba-app2/src/components/LoginComponent/Login.css
+++ b/sayba-app2/src/components/LoginComponent/Login.css
@@ -3,7 +3,7 @@
     place-items:center;
     height:100vh;
     /* background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%); */
-    background-image: linear-gradient(135deg, #cc208e 0%, #6713d2 100%);
+    background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
     background-size: 300%;
      animation: ani 5s infinite linear;
     }
