--- a/sayba-app2/src/components/MessagingComponent/Chat.css
+++ b/sayba-app2/src/components/MessagingComponent/Chat.css
@@ -11,6 +11,7 @@
     display: flex;
     align-items: center;
     border-bottom: 1px solid lightgray;
+    background-color: #fff1eb;
 }
 
 .chat__headerInfo {
@@ -60,7 +61,7 @@ font-size:xx-small;
 
 .chat__reciever{
 margin-left:auto;
-background-color: #d0bdf4
+background-color:#fff1eb
 }
 
 .chat__footer{
