--- a/sayba-app2/src/components/MessagingComponent/SidebarChat.css
+++ b/sayba-app2/src/components/MessagingComponent/SidebarChat.css
@@ -14,7 +14,8 @@ a{
 
 
 .sidebarChat:hover {
-    background-color: #ebebeb
+    background-color: #ebebeb;
+    /* background-image: linear-gradient(135deg, #cc208e 0%, #6713d2 100%); */
     
 }
 
