--- a/sayba-app2/src/components/ManagerComponent/Manager.scss
+++ b/sayba-app2/src/components/ManagerComponent/Manager.scss
@@ -127,7 +127,7 @@ cursor: pointer;
 li{
     padding-left: 10px;
     padding-right:15px;
-    &:hover .sidebar__project-delete{
+    &:hover .sidebart__project-delete{
         display:block;
     }
 }
@@ -147,33 +147,33 @@ li{
 }
 // }
 &:nth-child(1){
-    .sidebar__dot{
+    .sidebart__dot{
         color:#6accbc;
     }
 }
 
 &:nth-child(2){
-    .sidebar__dot{
+    .sidebart__dot{
         color: #fad002;
     }
 }
 
 
 &:nth-child(3){
-    .sidebar__dot{
+    .sidebart__dot{
         color:#6accbc;
     }
 }
 
 &:nth-child(4){
-    .sidebar__dot{
+    .sidebart__dot{
         color: #ff9932;
     }
 }
 
 
 &:nth-child(5){
-    .sidebar__dot{
+    .sidebart__dot{
         color: #af38eb;
     }
 }
@@ -241,10 +241,80 @@ h2{
         }
     }
 }
-
 }
 
 
+.project-delete-model{
+    position: relative;
+
+    &__inner{
+        @include box-overlay();
+       
+        width: 90%;
+      margin: 2%;
+        top: 10px;
+        right: 0;
+        background-color:white;
+
+        p{
+            margin-top: 5px;
+            margin-bottom: 5px;
+            line-height:normal;
+            font-weight: normal;
+            font-size: 15px;
+          
+        }
+
+        button{
+            @include btn ('50px');
+        }
+        span {
+            @include cancel();
+            font-weight: normal;
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
+
+// .project-delete-model{
+// position: relative;
+
+// &__inner{
+//     @include box-overlay();
+//     margin-block-start: 0.83em;
+//     margin-block-end: 0.83em;
+//     margin-inline-start: 0px;
+//     margin-inline-end: 0px;
+
+//     p{
+//         margin-top: 5px;
+//         margin-bottom: 5px;
+//         line-height: normal;
+//         font-weight: normal;
+//         font-size:15px;
+//     }
+
+//     button{
+//         @include btn('50px');
+//     }
+//     span{
+//         @include ('10px');
+//         font-weight: normal;
+//     }
+// }
+// }
+// }
+
+
+// }
 // .darkmode{
 //     header{
 //         -webkit-box-shadow: 0 1px 3px 0 rgba(0,0,0,0.15);
