--- a/sayba-app2/src/components/TwoDoComponent/TwoDo.css
+++ b/sayba-app2/src/components/TwoDoComponent/TwoDo.css
@@ -1,5 +1,260 @@
+.todobody{
+  background-color: #ace0f9 ;
+  height: 100vh;
+}
+
+.todoh2{
+  padding-left: 32%;
+  padding-top: 10%;
+}
+
+.listtobody{
+ height: fit-content;
+ background-color: #ace0f9 ;
+}
+
+
+.add{
+  height: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  margin-top: 20px;
+  width: auto; 
+}
+
+.todo-item{
+  background-color: none;
+  justify-content: space-between;
+}
+
+.todo-input{
+ 
+  font-size: larger;
+border: none;
+display: flex;
+
+}
+
+
+.todocomplete__btn{
+  /* color: yellow !important;
+  background-color: black !important; */
+  justify-content: space-between;
+  margin-right: 2%;
+  
+
+  background: #008000;
+  color: white;
+  border: none;
+  cursor: pointer;
+  /* font-size: 1rem; */
+}
+.tododelete__btn{
+  /* color: yellow !important;
+  background-color: black !important; */
+  
+  background: #FF0000;
+  color: white;
+  border: none;
+  /* padding: 1rem; */
+  cursor: pointer;
+  /* font-size: 1rem; */
+}
+
+
+
+
+.filter-todo{
+  font-size: small;
+  font-weight: bold;
+  border: none;
+  display: center;
+  padding-top: 20px;
+
+}
+
+.select::after {
+  /* content: "\25BC"; */
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0rem;
+  /* background: #ff6f47; */
+  cursor: pointer;
+  pointer-events: none;
+} 
+
+.todo-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.todo-list {
+  width: 90%;
+  list-style: none;
+  margin-top: 2%;
+  justify-content: space-between;
+}
+
+
+/* 
+.todo:nth-child(4n + 1) {
+  background: linear-gradient(
+    90deg,
+    rgba(93, 12, 255, 1) 0%,
+    rgba(155, 0, 250, 1) 100%
+  );
+}
+
+.todo:nth-child(4n + 2) {
+  background: linear-gradient(
+    90deg,
+    rgba(255, 12, 241, 1) 0%,
+    rgba(250, 0, 135, 1) 100%
+  );
+}
+
+.todo:nth-child(4n + 3) {
+  background: linear-gradient(
+    90deg,
+    rgba(20, 159, 255, 1) 0%,
+    rgba(17, 122, 255, 1) 100%
+  );
+}
+  */
+
+
+
+
+
+
+
+/* form input,
+form button {
+  padding: 0.5rem;
+  font-size: 2rem;
+  border: none;
+  background: white;
+} */
+
+
+.todo-button > .MuiSvgIcon-root {
+  color: whitesmoke !important;
+  background: #108dc7c5 !important;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.todo-button  > .MuiSvgIcon-root:hover {
+  background: #ff6f47 !important;
+  color: white;
+} 
+
+
+/* .todo-list {
+  min-width: 30%;
+  list-style: none;
+} */
+
+.todo {
+  margin: 0.5rem;
+  background: white;
+  font-size: 1.5rem;
+  color: black;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 8%;
+  align-items: center;
+  width: auto;
+}
+.filter-todo {
+  padding: 1rem;
+}
+.todo li {
+  flex: 1;
+}
+
+.trash-btn,
+.complete-btn {
+  background: #ff6f47;
+  color: white;
+  border: none;
+  padding: 1rem;
+  cursor: pointer;
+  font-size: 1rem;
+}
+.complete-btn {
+  background: rgb(11, 212, 162);
+}
+.todo-item {
+  padding: 0rem 0.5rem;
+}
+
+.fa-trash,
+.fa-check {
+  pointer-events: none;
+}
+
+.fall {
+  transform: translateY(10rem) rotateZ(20deg);
+  opacity: 0;
+}
 
 .completed {
+  text-decoration: line-through;
+  opacity: 0.5;
+}
+
+/*CUSTOM SELECTOR */
+/* select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  outline: 0;
+  box-shadow: none;
+  border: 0 !important;
+  background-image: none;
+} */
+
+/* Custom Select */
+.select {
+  margin: 1rem;
+  position: relative;
+  overflow: hidden;
+}
+select {
+  /* color: #ff6f47;
+  font-family: "Poppins", sans-serif;
+  cursor: pointer;
+  width: 12rem; */
+}
+
+
+/* Arrow */
+ /* .select::after {
+  content: "\25BC";
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 1rem;
+  background: #ff6f47;
+  cursor: pointer;
+  pointer-events: none;
+}  */
+
+
+
+/* Transition */
+
+.select:hover::after {
+  transform: scale(1.5);
+}
+
+/* .completed {
     text-decoration: line-through;
     opacity: 0.5;
-  }
+  } */
