--- a/sayba-app2/src/components/FeedComponent/Feed.css
+++ b/sayba-app2/src/components/FeedComponent/Feed.css
@@ -8,17 +8,7 @@
     animation: ani 5s infinite linear;
     /* background-size: 300%;
     background-image: linear-gradient(135deg, #cc208e 0%, #6713d2 100%); */
-    background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
-    /* background: #C9CCD3; */
- /* background-image: linear-gradient(-180deg, rgba(255,255,255,0.50) 0%, rgba(0,0,0,0.50) 100%);
- background-blend-mode: lighten; */
- /* background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%); */
- /* background-image: linear-gradient(to left, #BDBBBE 0%, #9D9EA3 100%), radial-gradient(88% 271%, rgba(255, 255, 255, 0.25) 0%, rgba(254, 254, 254, 0.25) 1%, rgba(0, 0, 0, 0.25) 100%), radial-gradient(50% 100%, rgba(255, 255, 255, 0.30) 0%, rgba(0, 0, 0, 0.30) 100%);
- background-blend-mode: normal, lighten, soft-light; */
- /* 
-  */
-  /* background: linear-gradient(to bottom, rgba(255,255,255,0.15) 0%, rgba(0,0,0,0.15) 100%), radial-gradient(at top center, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.40) 120%) #989898;
-  background-blend-mode: multiply,multiply; */
+background-image: linear-gradient(-225deg, #22E1FF 0%, #1D8FE1 48%, #625EB1 100%);
  
 }
 
