--- a/sayba-app2/src/components/HomePostComponent/HomePost.css
+++ b/sayba-app2/src/components/HomePostComponent/HomePost.css
@@ -3,7 +3,7 @@
     margin-top:15px;
     border-radius:15px;
     background-color: white;
-    box-shadow:0px 5px 7px -7px rgba(o,o,o,o.75);
+    box-shadow:6px 5px 7px -7px rgba(0,0,0,0.75);
 }
 .post__top{
     display: flex;
