--- a/sayba-app2/src/components/RelaxComponent/Relax.css
+++ b/sayba-app2/src/components/RelaxComponent/Relax.css
@@ -1,98 +1,117 @@
 
 
-.container {
+
+.rheader{
+    height: fit-content;
+}
+
+
+
+
+.apps{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+
+
+
+
+
+
+.cards {
+    /* background-color: orange; */
+    margin-top: 20%;
+    width: 40%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+    /* text-shadow: 10px 10px 10px 10px  black; */
+    text-shadow:5px 5px px black;
+}
+
+.headings{
     display: flex;
     align-items: center;
-    justify-content: center;
-    margin: auto;
-    height: 300px;
-    width: 300px;
+
+}
+
+
+
+
+
+.button {
+    margin-top: 40%;
     position: relative;
-    transform: scale(1);
+    outline: none;
+    text-decoration: none;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    text-transform: uppercase;
+    height: 70px;
+    width: 70px;
+    opacity: 1;
+    background-color: #ffffff;
+    border: 1px solid rgba(22, 76, 167, 0.6);
   }
-  
-  .circle {
-    background-color: #010f1c;
-    height: 100%;
-    width: 100%;
-    border-radius: 50%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
+    
+  .button span {
+    color: #164ca7;
+    font-size: 12px;
+    font-weight: 500;
+    letter-spacing: 0.7px;
   }
-  
-  .gradient-circle {
-    background: conic-gradient(
-      #55b7a4 0%,
-      #4ca493 40%,
-      #fff 40%,
-      #fff 60%,
-      #336d62 60%,
-      #2a5b52 100%
-    );
-    height: 320px;
-    width: 320px;
-    z-index: -2;
-    border-radius: 50%;
-    position: absolute;
-    top: -10px;
-    left: -10px;
+    
+  .button:hover {
+    animation: rotate 0.7s ease-in-out both;
   }
-  
-  .pointer {
-    background-color: #fff;
-    border-radius: 50%;
-    height: 20px;
-    width: 20px;
-    display: block;
+    
+  .button:hover span {
+    animation: storm 0.7s ease-in-out both;
+    animation-delay: 0.06s;
   }
-  
-  .pointer-container {
-    position: absolute;
-    top: -40px;
-    left: 140px;
-    width: 20px;
-    height: 190px;
-    animation: rotate 7.5s linear forwards infinite;
-    transform-origin: bottom center;
-  }
-  
+    
   @keyframes rotate {
-    from {
-      transform: rotate(0deg);
+    0% {
+      transform: rotate(0deg) translate3d(0, 0, 0);
     }
-  
-    to {
-      transform: rotate(360deg);
+    25% {
+      transform: rotate(3deg) translate3d(0, 0, 0);
     }
-  }
-  
-  .container.grow {
-    animation: grow 3s linear forwards;
-  }
-  
-  @keyframes grow {
-    from {
-      transform: scale(1);
+    50% {
+      transform: rotate(-3deg) translate3d(0, 0, 0);
     }
-  
-    to {
-      transform: scale(1.2);
+    75% {
+      transform: rotate(1deg) translate3d(0, 0, 0);
+    }
+    100% {
+      transform: rotate(0deg) translate3d(0, 0, 0);
     }
   }
-  
-  .container.shrink {
-    animation: shrink 3s linear forwards;
-  }
-  
-  @keyframes shrink {
-    from {
-      transform: scale(1.2);
+    
+  @keyframes storm {
+    0% {
+      transform: translate3d(0, 0, 0) translateZ(0);
     }
-  
-    to {
-      transform: scale(1);
+    25% {
+      transform: translate3d(4px, 0, 0) translateZ(0);
     }
-  }
-  
+    50% {
+      transform: translate3d(-3px, 0, 0) translateZ(0);
+    }
+    75% {
+      transform: translate3d(2px, 0, 0) translateZ(0);
+    }
+    100% {
+      transform: translate3d(0, 0, 0) translateZ(0);
+    }
+  }  
