--- a/sayba-app2/src/components/TwoDoComponent/TwoDo.css
+++ b/sayba-app2/src/components/TwoDoComponent/TwoDo.css
@@ -1,16 +1,22 @@
 .todobody{
   background-color: #ace0f9 ;
   height: 100vh;
+  width: 100%;
 }
 
 .todoh2{ 
-  padding-left: 32%;
+
   padding-top: 10%;
+  display: flex;
+  align-content: center;
+  padding: 10%;
+  padding-left: 30%;
 }
 
 .listtobody{
  height: fit-content;
  background-color: #ace0f9 ;
+ box-sizing: border-box;
 }
 
 
@@ -34,6 +40,7 @@
   font-size: larger;
 border: none;
 display: flex;
+margin-left: 0%;
 
 }
 
