--- a/sayba-app2/src/components/FeedComponent/Feed.css
+++ b/sayba-app2/src/components/FeedComponent/Feed.css
@@ -8,8 +8,11 @@
     animation: ani 5s infinite linear;
     /* background-size: 300%;
     background-image: linear-gradient(135deg, #cc208e 0%, #6713d2 100%); */
-background-image: linear-gradient(-225deg, #22E1FF 0%, #1D8FE1 48%, #625EB1 100%);
+background-color:  #ace0f9 ;
  
+  
+
+    
 }
 
 
