--- a/sayba-app2/src/App.css
+++ b/sayba-app2/src/App.css
@@ -11,3 +11,33 @@
 .app__body{
  display: flex;
 } */ 
+
+.page{
+    position: absolute;
+    top: 100px;
+    left: 0;
+    right: 0;
+}
+
+.fade-appear
+.fade-enter{
+    opacity: 0;
+    z-index: 1;
+}
+
+.fade-appear-active
+.fade-enter.fade-enter-active{
+    opacity: 1;
+    transition: opacity 300ms linear 150ms;
+}
+
+.fade-exit{
+    opacity: 1;
+}
+
+
+.fade-exit.fade-exit-active{
+    opacity: 0;
+    transition: opacity 150ms linear;
+}
+
