--- a/sayba-app2/src/components/RelaxComponent/Relax.css
+++ b/sayba-app2/src/components/RelaxComponent/Relax.css
@@ -32,8 +32,8 @@
     align-items: center;
     flex-direction: column;
     color: white;
-    /* text-shadow: 10px 10px 10px 10px  black; */
-    text-shadow:5px 5px px black;
+    text-shadow: 10px 10px 10px 10px  black;
+    text-shadow:5px 5px  black;
 }
 
 .headings{
